# lakeroad

./: .env.template  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  dependencies.sh  experiment.rkt  fmt.sh  import_all_primitives.sh  lakeroad  new-arch.md  programs-to-synthesize.rkt  requirements.txt  rosette-bug.sh  run-tests.sh  sleep.sh  ultrascale-tests.rkt  ultrascale.rkt
SOFA_modules/: README.md  frac_lut4.v  frac_lut4_mux.v
architecture_descriptions/: intel.yml  intel_cyclone10lp.yml  lattice_ecp5.yml  sofa.yml  xilinx_ultrascale_plus.yml  xilinx_virtex.yml
docs/: new-primitive.md
integration_tests/: README.md  run.sh
lakeroad-egglog/: .gitignore  Cargo.toml
misc/: verilator.mk.template  verilator_testbench.cc.template  verilator_testbench.sv.template
modules_for_importing/: README.md
old_versions/: README.md
old_versions/churchroad_old/: Cargo.toml
old_versions/churchroad_old/lakeroad_programs/: bithack_bithack1.lakeroad  bithack_bithack2.lakeroad  bithack_cycle.lakeroad  bithack_exchange.lakeroad  bithack_floor_avg.lakeroad  bithack_roundpower.lakeroad
old_versions/churchroad_old/src/: example_programs.rs
python/: lattice.py  sofa.py  syn_add_2bit_ecp5.py  test_lattice.py  utils.py  verilog_to_racket.py
racket/: DSP48E2.btor  architecture-config-demo.rkt  architecture-description.rkt  attempt-to-synthesize.rkt  btor-to-racket.rkt  btor.rkt  circt-comb-operators.rkt  comp-json.rkt  comparisons-on-lattice-example.rkt  compile-to-json.rkt  dsp-test.rkt  experiment.ipynb.unused  experiment.rkt  gator-interpreter.rkt  (+68 more)
(+289 files in other folders)
