[package]
name = "lakeroad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg = "0.7"
env_logger = "0.9.0"
rand = "0.8.4"
rayon = "1.5"
test-log = "=0.2.8" # TODO(@gussmith23) Change to 0.2 when https://github.com/d-e-s-o/test-log/issues/22 resolves.

[dev-dependencies]
walkdir = "2.3.2"
